--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.1",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
-    "mongoose": "^5.8.4"
+    "mongoose": "^5.8.4",
+    "puppeteer": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
