--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
     "axios": "^0.19.1",
+    "classnames": "^2.2.6",
     "cra-template": "1.0.0",
     "http-proxy-middleware": "^0.20.0",
     "react": "^16.12.0",
