--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.1",
-    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "puppeteer": "^2.0.0"
   },
   "devDependencies": {
